Ionic 7 bug fixes: ion-searchbar now uses IonInput instead of IonChange, finish migration to Swiper 9 Element

--- a/src/app/pages/board/editboardpost/editboardpost.page.html
+++ b/src/app/pages/board/editboardpost/editboardpost.page.html
@@ -99,7 +99,7 @@
         </ion-item>
 
         <div *ngIf="resourceService.showPixabay > -1">
-            <ion-searchbar [(ngModel)]="resourceService.searchKeyword" (ionChange)="resourceService.searchPixabay()" placeholder="Type keywords to search Pixabay" debounce="500"></ion-searchbar>
+            <ion-searchbar [(ngModel)]="resourceService.searchKeyword" (ionInput)="resourceService.searchPixabay()" placeholder="Type keywords to search Pixabay" debounce="500"></ion-searchbar>
             <ion-grid class="pixabay-grid" *ngIf="resourceService.stockPhotoResults && resourceService.stockPhotoResults.hits?.length">
                 <ion-row>
                     <ion-col *ngFor="let photo of resourceService.stockPhotoResults.hits">
