--- a/src/app/pages/user/about/preferences/preferences.page.html
+++ b/src/app/pages/user/about/preferences/preferences.page.html
@@ -7,7 +7,7 @@
     <ion-title *ngIf="!organizer">About Me</ion-title>
   </ion-toolbar>
   <!--<ion-toolbar>
-    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)"></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionInput)="executeSearch($event)"></ion-searchbar>
   </ion-toolbar>-->
 </ion-header>
 
