--- a/src/app/pages/connect/myconversations/myconversations.page.html
+++ b/src/app/pages/connect/myconversations/myconversations.page.html
@@ -48,7 +48,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar *ngIf="platform.width() < 768">
-    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)" value=""></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionInput)="executeSearch($event)" (ionCancel)="cancelSearch($event)" value=""></ion-searchbar>
   </ion-toolbar>
   <!--<ion-toolbar [hidden]="((userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder) && (!platform.is('cordova') || (userData.user && userData.user.importContactList) || userData.delayImportContactListReminder)">
     <ion-item-sliding side="end" [hidden]="(userData.user && userData.user.enablePushNotification) || userData.delayPushNotificationReminder">
@@ -99,7 +99,7 @@
     <ion-row style="height: 100%">
       <ion-col [ngStyle]="{'height': (platform.width() >= 768) ? 'calc(100% - 58px)' : '100%', 'padding-right': (platform.width() >= 768) ? '5px' : '0px'}" class="ion-no-padding" size-xs="12" size-sm="12" size-md="5" size-lg="4">
         <ion-toolbar *ngIf="platform.width() >= 768" style="--background: var(--ion-toolbar-background, var(--ion-color-step-50, #fff))">
-          <ion-searchbar #searchBar slot="start" [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)" value=""></ion-searchbar>
+          <ion-searchbar #searchBar slot="start" [(ngModel)]="searchKeyword" debounce="500" (ionInput)="executeSearch($event)" (ionCancel)="cancelSearch($event)" value=""></ion-searchbar>
         </ion-toolbar>
         <ion-content>
           <ion-list>
