--- a/src/app/pages/manage/communities/communities.page.html
+++ b/src/app/pages/manage/communities/communities.page.html
@@ -6,7 +6,7 @@
     <ion-title>Manage Platforms</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)"></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionInput)="executeSearch($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
