--- a/src/app/pages/manage/members/members.page.html
+++ b/src/app/pages/manage/members/members.page.html
@@ -11,7 +11,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)"></ion-searchbar>
+    <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionInput)="executeSearch($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
